--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^1.4.7",
+    "flowbite-react": "^0.0.25",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-scroll": "^1.8.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
